-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.3, 6.1.0 RC
-
-
c9768c1e2440e52976c3456a9a4d302edf49f56a (qt/qtdatavis3d/dev) 9802dbcf01236da02f79f270535093fb53fabb5a (qt/qtdatavis3d/6.1)
Gradients don't work with quickcompiler, without the quickcompiler they work. This can be seen in examples such as qmlbars, qmlpectrogram, and qmlsurfacelayers.
In qmlspectrogram the graph at center should be colorful like the bar on the right. However, the gradients don't work and the graph is completely green.
In atttachments, the images display how the examples should look.